# espcand

./: .gitignore  .gitmodules  Cargo.toml  README.md  all.code-workspace
.cargo/: config.toml
canterm/: Cargo.toml  config.toml
canterm/examples/: tcp_async.rs  tcp_listen.rs
canterm/src/: config.rs  interpret.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/socket/: command_buffer.rs  command_parser.rs
corelib/: Cargo.toml
corelib/src/: lib.rs
corelib/src/filter/: basics.rs  filter.rs  mod.rs  utils.rs
corelib/src/socket/: command_parser.rs
corelib/src/utils/: can_frame.rs  error.rs  filter.rs  mod.rs  ringbuffer.rs  rx_buffer.rs  ser_deser.rs
doc/: protocol.md
esp/: Cargo.toml
esp/.cargo/: config.toml
esp/examples/: blinky.rs  can.rs  can_async.rs  dhcp.rs  flash.rs  hello.rs  tcp_echo.rs
esp/src/: can.rs  config.rs  init.rs  macros.rs  main.rs  wifi.rs
examples/: blinky.rs  dhcp.rs  hello.rs  rtic_button.rs
linux/: Cargo.toml  config.toml
linux/src/: config.rs  input_widget.rs  interpret.rs  list_widget.rs  main.rs
python/: bench_tcp_echo.py  filter.py  show_can_data.py
src/: main.rs
src/socket/: command_buffer.rs  command_parser.rs  mod.rs
src/utils/: error.rs  mod.rs
usage/python/: interface.py  main.py  test.py
usage/rust/: Cargo.toml
usage/rust/src/: main.rs
