[package]
name    = "espcand"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "main"
test = false
bench = false


[dependencies]
defmt               = "1.0.1"
rtt-target          = { version = "0.6.1", features = ["defmt"] }
aligned             = { version = "0.4.2", optional = true }
cfg-if              = "1.0.0"
critical-section    = "1.1.3"
embassy-executor    = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-futures     = "0.1.1"
embassy-net = { version = "0.6.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync        = "0.6.2"
embassy-time        = "0.4.0"

embedded-hal-async  = "1.0.0"
embedded-io         = { version = "0.6.1", default-features = false }
embedded-io-async   = "0.6.1"
embedded-storage    = "0.3.1"

esp-alloc           = { path = "../../rust/esp-hal/esp-alloc" }
esp-backtrace       = { path = "../../rust/esp-hal/esp-backtrace", features = ["exception-handler", "panic-handler", "println"] }
esp-bootloader-esp-idf = { path = "../../rust/esp-hal/esp-bootloader-esp-idf" }
esp-hal             = { path = "../../rust/esp-hal/esp-hal", features = ["unstable"] }
esp-hal-embassy     = { path = "../../rust/esp-hal/esp-hal-embassy", optional = true }
esp-ieee802154      = { path = "../../rust/esp-hal/esp-ieee802154", optional = true }
esp-println         = { path = "../../rust/esp-hal/esp-println", features = ["log-04"] }
esp-storage         = { path = "../../rust/esp-hal/esp-storage", optional = true }
esp-wifi            = { path = "../../rust/esp-hal/esp-wifi", features = ["wifi"], optional = true }

heapless            = "0.8.0"
log                 = "0.4.27"
nb                  = "1.1.0"
# sha2                = { version = "0.10.8", default-features = false }
smoltcp             = { version = "0.12.0", default-features = false, features = [ "medium-ethernet", "socket-raw"] }
static_cell         = { version = "2.1.0" }

[features]
default = ["esp32c3", "embassy", "esp-wifi"]

esp32   = ["esp-hal/esp32",   "esp-backtrace/esp32",   "esp-hal-embassy?/esp32",   "esp-println/esp32",   "esp-storage?/esp32",   "esp-wifi?/esp32",   "esp-bootloader-esp-idf/esp32"]
esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-hal-embassy?/esp32c2", "esp-println/esp32c2", "esp-storage?/esp32c2", "esp-wifi?/esp32c2", "esp-bootloader-esp-idf/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy?/esp32c3", "esp-println/esp32c3", "esp-storage?/esp32c3", "esp-wifi?/esp32c3", "esp-bootloader-esp-idf/esp32c3"]
esp32c6 = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy?/esp32c6", "esp-println/esp32c6", "esp-storage?/esp32c6", "esp-wifi?/esp32c6", "esp-bootloader-esp-idf/esp32c6", "esp-ieee802154?/esp32c6"]
esp32h2 = ["esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-hal-embassy?/esp32h2", "esp-println/esp32h2", "esp-storage?/esp32h2", "esp-wifi?/esp32h2", "esp-bootloader-esp-idf/esp32h2", "esp-ieee802154?/esp32h2"]
esp32s2 = ["esp-hal/esp32s2", "esp-backtrace/esp32s2", "esp-hal-embassy?/esp32s2", "esp-println/esp32s2", "esp-storage?/esp32s2", "esp-wifi?/esp32s2", "esp-bootloader-esp-idf/esp32s2"]
esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-hal-embassy?/esp32s3", "esp-println/esp32s3", "esp-storage?/esp32s3", "esp-wifi?/esp32s3", "esp-bootloader-esp-idf/esp32s3"]

esp-wifi = ["dep:esp-wifi"]

embassy                = ["dep:esp-hal-embassy"]

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = true
incremental      = false
opt-level        = 3
lto = 'fat'
overflow-checks  = false
