[package]
name = "esp32-c3"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
log                 = "0.4.27"
embedded-io-async   = "0.6.1"
defmt               = "1.0.1"
defmt-rtt           = "1.0.0"

embassy-executor    = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-futures     = { version = "0.1.1" }
embassy-net         = { version = "0.6.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync        = { version = "0.6.2", features = [] }
embassy-time        = { version = "0.4.0", features = [] }

esp-alloc           = { path = "../../rust/esp-hal/esp-alloc", features = [] }
esp-backtrace       = { path = "../../rust/esp-hal/esp-backtrace", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "defmt",
] }
esp-bootloader-esp-idf = { path = "../../rust/esp-hal/esp-bootloader-esp-idf", features = ["esp32c3"] }
esp-hal             = { path = "../../rust/esp-hal/esp-hal", features = ["unstable", "esp32c3", "log-04"] }
esp-hal-embassy     = { path = "../../rust/esp-hal/esp-hal-embassy", features = ["esp32c3"] }
esp-println         = { path = "../../rust/esp-hal/esp-println", features = ["log-04", "esp32c3", "defmt-espflash"] }
esp-storage         = { path = "../../rust/esp-hal/esp-storage", optional = true }
esp-wifi            = { path = "../../rust/esp-hal/esp-wifi", features = ["wifi", "esp32c3", "log-04"]}

rtic = { path = "../../rust/rtic/rtic"}
rtic-monotonics = { path = "../../rust/rtic/rtic-monotonics" }
esp32c3 = {version = "0.30.0", features = ["critical-section"]}

static_cell         = { version = "2.1.0" }

[features]
default = ["rtic/riscv-esp32c3-backend", "rtic-monotonics/esp32c3-systimer"]
