[package]
name = "espcand"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
log                 = "0.4.27"
embedded-io-async   = "0.6.1"
defmt               = "1.0.1"
defmt-rtt           = "1.0.0"
static_cell         = { version = "2.1.0" }

embassy-executor    = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-futures     = { version = "0.1.1" }
embassy-net         = { version = "0.6.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync        = { version = "0.6.2", features = [] }
embassy-time        = { version = "0.4.0", features = [] }

esp-alloc           = { path = "../../rust/esp-hal/esp-alloc", features = [] }
esp-backtrace       = { path = "../../rust/esp-hal/esp-backtrace", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "defmt",
] }
esp-bootloader-esp-idf = { path = "../../rust/esp-hal/esp-bootloader-esp-idf" }
esp-hal             = { path = "../../rust/esp-hal/esp-hal", features = ["unstable", "defmt"] }
esp-hal-embassy     = { path = "../../rust/esp-hal/esp-hal-embassy" }
esp-println         = { path = "../../rust/esp-hal/esp-println", features = ["log-04", "defmt-espflash"] }
esp-wifi            = { path = "../../rust/esp-hal/esp-wifi", features = ["wifi", "defmt"]}

[features]
default = ["esp32c3"]
esp32c3 = [
    "esp-bootloader-esp-idf/esp32c3", 
    "esp-hal/esp32c3", 
    "esp-hal-embassy/esp32c3",
    "esp-println/esp32c3",
    "esp-wifi/esp32c3",
]