[package]
name = "espcand"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "espcand"
path = "src/main.rs"
test = false
doctest = false
bench = false

[workspace]

[dependencies]
corelib             = { path = "../corelib" }

log                 = "0.4.27"
embedded-can        = "0.4.1"
embedded-io-async   = "0.6.1"
static_cell         = { version = "2.1.0" }

embassy-executor    = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-futures     = { version = "0.1.1" }
embassy-net         = { version = "0.6.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync        = { version = "0.6.2", features = [] }
embassy-time        = { version = "0.4.0", features = [] }

esp-alloc           = { path = "../esp-hal/esp-alloc" }
esp-backtrace       = { path = "../esp-hal/esp-backtrace", features = [
    "esp32c3",
    "panic-handler",
    "println",
] }
esp-bootloader-esp-idf = { path = "../esp-hal/esp-bootloader-esp-idf" }
esp-hal             = { path = "../esp-hal/esp-hal", features = ["unstable", "log-04"] }
esp-hal-embassy     = { path = "../esp-hal/esp-hal-embassy" }
esp-println         = { path = "../esp-hal/esp-println", features = ["log-04"] }
esp-radio           = { path = "../esp-hal/esp-radio", features = ["wifi", "log-04"]}
esp-radio-preempt-baremetal = { path = "../esp-hal/esp-radio-preempt-baremetal", features = ["log-04"]}

[dev-dependencies]
nb                  = "1.1.0"

[features]
default = ["esp32c3"]
esp32c3 = [
    "esp-bootloader-esp-idf/esp32c3", 
    "esp-hal/esp32c3", 
    "esp-hal-embassy/esp32c3",
    "esp-println/esp32c3",
    "esp-radio/esp32c3",
    "esp-radio-preempt-baremetal/esp32c3",
]